# game_of_life

./: CMakeLists.txt  README.md
include/game_of_life/: world.h  worldHandler.h
src/game_of_life/: main.cpp  world.cpp  worldHandler.cpp
